# CPPRevision

./: CMakeLists.txt  ConversionConstructor.cpp  FunctionPointers.cpp  LambdaFunction.cpp  LastLecture.cpp  MusicalDuck.cpp  OperatorOverloading.cpp  OperatorOverloading2.cpp  README.md  SmarterPointer.cpp  StupidPointer.cpp  TemplateClass.cpp  TheFriend.cpp  TheFriend.h  assignmentoperator.cpp  const.cpp  copyconstructor.cpp  exam question1 reference and virtual functions.cpp  exceptions.cpp  friendfunction.cpp  main.cpp  mystringfunctions.cpp  scoping operator.cpp  slicingproblem.cpp  static local and global.cpp  stldemo.cpp  stltest.cpp  test.cpp  testFunctors.cpp  testreference.cpp  virtualfunction.cpp
